--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "framer-motion": "^10.18.0",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
@@ -25,4 +27,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
-} 
+}
