--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^3.0.1"
+    "resend": "^4.1.2",
+    "tailwind-merge": "^3.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
